# sigvue

./: .gitignore  README.md  README_PYPI.md  browser.example.toml  pyproject.toml  todo.md  workspace-browser.spec
.github/workflows/: publish-pypi.yml
example_pipelines/: README.md
example_pipelines/comms/: analysis.py  models.py  presentation.py  workspace.py
example_pipelines/plugins/: __init__.py  discovery.py  lifecycle.py  plotly.py
example_pipelines/plugins/sigmf/: __init__.py  annotations.py  delivery.py  exports.py  recording.py  source.py  writer.py
example_pipelines/scripts/: generate_all.py  generate_comms.py  generate_lte.py
example_pipelines/tests/: test_pipelines.py  test_plugins.py
example_pipelines/waterfall/: analysis.py  models.py  plots.py  presentation.py  scales.py  workspace.py
examples/: __init__.py  generic.py  lfm_collection.py  lfm_full_recording.py  lfm_pipeline.py  plot_style.py  pri.py  profile.py  sigmf.py  sigmf_matplotlib.py
examples/data/: four-channel.sigmf-data  single-channel-bursts.sigmf-meta
packaging/: runtime_hook_kaleido.py
scripts/: build_pypi_readme.py
src/sigvue/: __init__.py  plugin.py  profile.py
src/sigvue/_packaging/: __init__.py  build.py  sigvue.spec
src/sigvue/catalog/: __init__.py  browser.py
src/sigvue/core/: capabilities.py  contracts.py  errors.py  layout.py  models.py  page.py  plugin.py
src/sigvue/helpers/: __init__.py  config.py  downloads.py  formatting.py
src/sigvue/layout/: __init__.py  components.py
src/sigvue/refresh/: manager.py
src/sigvue/registry/: discovery.py  registry.py
src/sigvue/rendering/: __init__.py  dispatch.py  heatmap.py
src/sigvue/web/: __init__.py  application.py
src/workspace_browser/: __init__.py  plugin.py  profile.py
src/workspace_browser/catalog/: __init__.py  browser.py
src/workspace_browser/core/: __init__.py  layout.py  models.py  page.py  plugin.py  status.py
src/workspace_browser/examples/: generic.py  plot_style.py  pri.py  profile.py  sigmf.py  sigmf_matplotlib.py
src/workspace_browser/layout/: __init__.py  components.py
src/workspace_browser/refresh/: __init__.py  manager.py
src/workspace_browser/registry/: __init__.py  discovery.py  registry.py
src/workspace_browser/rendering/: dispatch.py  matplotlib_renderer.py
tests/: fixtures.py  test_capabilities.py  test_catalog.py  test_discovery.py  test_helpers.py  test_layout.py  test_lfm_generator.py  test_lfm_pipeline.py  test_models.py  test_packaging.py  test_plugin.py  test_profile.py  test_refresh.py  test_registry.py  test_rendering.py  test_web_app.py
(+8 files in other folders)
