[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-browser"
version = "0.1.0"
description = "Pure-Python scientific workspace browser framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Scientific Workspace Browser" }]
dependencies = ["kaleido>=1.0", "matplotlib>=3.7", "numpy>=1.24", "plotly>=6.1.1", "scipy>=1.10", "tomli>=2; python_version < '3.11'"]

[project.optional-dependencies]
build = ["certifi>=2024.2.2", "pyinstaller>=6.0"]

[project.scripts]
workspace-browser = "workspace_browser.web.application:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
