[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigvue"
version = "2026.38"
description = "Extensible signal viewer"
readme = "README_PYPI.md"
requires-python = ">=3.10"
authors = [{ name = "Sigvue" }]
dependencies = [
    "certifi>=2024.2.2",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pillow>=9.4",
    "plotly>=6.1.1",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
build = ["certifi>=2024.2.2", "pyinstaller>=6.0"]
examples = ["numpy>=1.24", "scipy>=1.10"]
test = ["numpy>=1.24", "pytest>=8.0"]
release = ["build>=1.2", "twine>=5.0"]

[project.scripts]
sigvue = "sigvue.web.application:main"
sigvue-build = "sigvue._packaging.build:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sigvue = ["py.typed"]
"sigvue._packaging" = ["*.spec"]
